--- a/_includes/signoff.html
+++ b/_includes/signoff.html
@@ -1,8 +1,6 @@
 <br />
 <p>
-  Til next time,<br/>
-  {{ site.signoff }}
-  <span class="muted">{{ page.date | date: "at %H:%M" }}</span>
+  - {{ site.signoff }}
 </p>
 <p>
   <img src="/images/scribble3.png" alt="scribble" /> 
