Finished my very first blog post, still struggling with setting up Disqus.

--- a/_assets/style.scss
+++ b/_assets/style.scss
@@ -96,7 +96,7 @@ a, .as-link {
   text-decoration: none; 
   color: #269;
   line-height: 1.4em;
-  @include inline-block;
+  /*@include inline-block;*/
   @include transition(color 0.3s);
   &.main, &:hover { 
     color: darken(#269, 5%);
