--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -149,7 +149,7 @@ a, .as-link {
   text-decoration: none;
   color: #269;
   line-height: 1.4em;
-  display: inline-block;
+  display: block;
   vertical-align: baseline;
   zoom: 1;
   *display: inline;
