--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,7 +2,7 @@
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     // Required: on line below, replace text in quotes with your forum shortname
-    var disqus_shortname = 'FORUM SHORTNAME GOES HERE';
+    var disqus_shortname = '{{ site.disqus_shortname }}';
     
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
